# ansible-playbook-operator

./: .cursorrules  .gitignore  .pre-commit-config.yaml  AGENT.md  Dockerfile  LICENSE  README.md  artifacthub-repo.yml  index.yaml  pyproject.toml  renovate.json  requirements-dev.txt  requirements.txt
.cursor/rules/: agent-workflow.mdc  ansible-execution.mdc  backward-compatibility.mdc  cache-implementation.mdc  documentation-and-testing.mdc  git-workflow.mdc  kubernetes-controller-testing.mdc  kubernetes-helm-guidelines.mdc  licensing.mdc  namespace-deployment-strategy.mdc  observability.mdc  pre-commit.mdc  project-structure.mdc  pytest-workflow.mdc  python-guidelines.mdc  rbac-implementation.mdc  todo-tracking.mdc
.github/: cr.yaml  ct-config.yaml  kind-config.yaml  lintconf.yaml
.github/workflows/: ci.yml  helm-test.yml  helm.yml  image-pinning.yml
architecture/: .cursorrules  ROADMAP.md  TODO-future.md  TODO.md  backward-compatibility-policy.md  development-plan.md
docs/: AGENT.md  configuration.md  image-pinning-strategy.md  image-pinning.md  monitoring.md  performance.md  security.md  troubleshooting.md  upgrade.md
examples/: playbook-basic.yaml  playbook-check-mode.yaml  playbook-execution-options.yaml  playbook-with-pinned-executor.yaml  repository-https-token.yaml  repository-pvc-cache.yaml  repository-ssh.yaml  schedule-daily-random.yaml  schedule-hourly.yaml  schedule-monthly-random.yaml  schedule-weekly-random.yaml  schedule-yearly-random.yaml  values-cluster-watch.yaml  values-executor-serviceaccount.yaml  values-image-pinning.yaml  values-mixed-pinning.yaml  values-namespace-watch.yaml  values-networkpolicies.yaml  values-production-pinning.yaml  values-pvc-cache.yaml  values-rbac-presets.yaml  values-secret-restriction.yaml
helm/ansible-playbook-operator/: Chart.yaml  README.md  values.yaml
helm/ansible-playbook-operator/crds/: ansible.cloud37.dev_playbooks.yaml  ansible.cloud37.dev_repositories.yaml  ansible.cloud37.dev_schedules.yaml
helm/ansible-playbook-operator/templates/: NOTES.txt  _helpers.tpl  clusterrole.yaml  clusterrolebinding.yaml  deployment.yaml  executor-role.yaml  executor-rolebinding.yaml  executor-serviceaccount.yaml  networkpolicy-executor.yaml  networkpolicy-operator.yaml  pvc.yaml  role.yaml  rolebinding.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
s3-operator/architecture/: crd-specifications.md
scripts/: apply_schedule_once.py  build-and-push.sh  run-integration-tests.sh  update-image-digests.sh
src/ansible_operator/: constants.py  logging.py  main.py  metrics.py
src/ansible_operator/builders/: cronjob_builder.py  job_builder.py
src/ansible_operator/services/: dependencies.py  git.py  manual_run.py
src/ansible_operator/utils/: schedule.py
tests/integration/: README.md  conftest.py  test_concurrency_integration.py  test_integration.py
tests/unit/: test_concurrency_race_conditions.py  test_cronjob_builder.py  test_dependencies.py  test_dependency_rebuild.py  test_event_reasons.py  test_executor_serviceaccount.py  test_helm_image_pinning.py  test_image_pinning.py  test_job_builder.py  test_manual_run.py  test_metrics.py  test_networkpolicies.py  test_orphaned_probe_jobs.py  test_periodic_requeue.py  test_playbook_validation.py  test_repository_conditions.py  test_repository_existing_probe_jobs.py  test_repository_finalizer.py  test_schedule_adoption.py  test_schedule_conditions.py  test_schedule_macros.py  test_schedule_status.py
