[project]
name = "ansible-playbook-operator"
version = "0.1.0"
description = "Kubernetes operator for executing Ansible playbooks with Kopf"
requires-python = ">=3.11"
license = { text = "Unlicense" }
readme = ""  # intentionally omitted to avoid generating docs automatically
dependencies = [
  "kopf>=1.37.4",
  "kubernetes>=30.0.0",
  "prometheus-client>=0.20.0",
  "PyYAML>=6.0.1",
]

[project.optional-dependencies]
test = [
  "pytest>=7.0.0",
  "pytest-asyncio>=0.21.0",
  "safety>=3.0.0",
]

[tool.black]
line-length = 100
target-version = ["py311"]

# ruff configuration removed - using black for formatting and mypy for type checking

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
strict_optional = true
check_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
pretty = true
namespace_packages = true
explicit_package_bases = true
mypy_path = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["src"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["ansible_operator*"]
